--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@
      color: #2e2f42;
  }
 
- .link-nav{
+ .linknav{
      font-weight: 500;
      font-size: 16px;
      line-height: 1.5;
@@ -27,12 +27,12 @@
      color: #2e2f42;
  }
 
- .nav-list :hover,
- .nav-list :focus {
+ .linknav :hover,
+ .linknav :focus {
      color: #404bbf;
  }
 
-.address1{
+.address{
     font-style: normal;
 }
  .contacts {
@@ -48,7 +48,7 @@
  }
 
  /* section 1 */
- .section1 {
+ .section-one {
      background-color: #2e2f42;
  }
 
@@ -60,7 +60,7 @@
      color: #ffffff;
  }
 
- .button132 {
+ .buttonn {
      background-color: #4D5AE5;
      font-family: "Roboto", sans-serif;
      font-weight: 500;
@@ -71,8 +71,8 @@
      cursor: pointer;
  }
 
- .button132 :hover,
- .button132 :focus {
+ .buttonn :hover,
+ .buttonn :focus {
      background-color: #404BBF;
  }
 
@@ -95,7 +95,7 @@
  }
 
  /* section3 */
- .section3 {
+ .section-three {
      background-color: #F4F4FD;
  }
 
